# langgraph-supervisor

./: .env.sample  README.md  diagram.png.drawio  pyproject.toml  requirements.dev.txt  requirements.txt
langgraph_supervisor/: graph.py  hosting.py
langgraph_supervisor/services/: azure_openai_service.py
langgraph_supervisor/tools/: tools.py
tests/langgraph_supervisor/services/: test_azure_openai_service.py
